@@ -51,6 +51,7 @@ public class QuickMatchConfiguration
 		result.setPoints(points);
 		result.setPointsShare(pointsShare);
 		result.setPointsDraw(pointsDraw);
+		result.setSuddenDeathDisabled(suddenDeathDisabled);
 		
 		// levels
 		LevelsSelection levelsCopy = levelsSelection.copy();
@@ -123,6 +124,7 @@ public class QuickMatchConfiguration
 	private int limitTime = 60000;
 	private int limitPoints = 5;
 	private int limitRounds = -1;
+	private boolean suddenDeathDisabled = false;
 
 	public int getLimitTime()
 	{	return limitTime;
@@ -180,6 +182,13 @@ public class QuickMatchConfiguration
 	{	this.pointsDraw = pointsDraw;
 	}
 	
+	public boolean getSuddenDeathDisabled()
+	{	return suddenDeathDisabled;
+	}
+	public void setSuddenDeathDisabled(boolean suddenDeath)
+	{	this.suddenDeathDisabled = suddenDeath;
+	}
+	
 	public void reinitSettings()
 	{	levelsRandomOrder = false;
 		playersRandomLocation = false;
@@ -191,6 +200,7 @@ public class QuickMatchConfiguration
 		limitTime = 60000;
 		limitPoints = 5;
 		limitRounds = -1;
+		suddenDeathDisabled = false;
 	}
 	
 	/////////////////////////////////////////////////////////////////
